# IntSimulator

./: .gitignore  CMakeLists.txt  README.md
include/core/: ColorOutput.h  Logger.h  Types.h  Utils.h
include/game/: Civilization.h  EventSystem.h  GameEngine.h  ResourceManager.h  SaveSystem.h  TechnologyTree.h
include/ui/: Display.h  InputHandler.h  Win32Gui.h
src/: main.cpp  main_gui.cpp
src/core/: ColorOutput.cpp  Logger.cpp  Utils.cpp
src/game/: Civilization.cpp  EventSystem.cpp  GameEngine.cpp  ResourceManager.cpp  SaveSystem.cpp  TechnologyTree.cpp
src/ui/: Display.cpp  InputHandler.cpp  Win32Gui.cpp
